added changing backend

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,6 +7,7 @@ ENV REPO_ID hosted.mwe-wzu.snapshots
 ENV ARTIFACT_ID compass-web
 ENV ARTIFACT_VERSION LATEST
 ENV ARTIFACT_URL http://repo.sbb.ch/service/local/artifact/maven/content?r=${REPO_ID}&g=${ARTIFACT_GROUPID}&a=${ARTIFACT_ID}&v=LATEST&p=tar.gz
+ENV BACKEND_URL http://localhost:8080
 
 # Install curl
 RUN apt-get update && apt-get install curl -y && apt-get clean
@@ -17,3 +18,5 @@ RUN curl $ARTIFACT_URL -o ${ARTIFACT_ID}-${ARTIFACT_VERSION}.tar.gz
 # Extract and move to nginx html folder
 RUN tar -xzf ${ARTIFACT_ID}-${ARTIFACT_VERSION}.tar.gz
 RUN mv build/* /usr/share/nginx/html
+
+CMD sed -i "s#http://localhost:8080/#${BACKEND_URL}#g" /usr/share/nginx/html/app.*.js && nginx -g 'daemon off;'
